<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_human_radar</name>
  <version>1.9.9</version>
  <description>A radar-like visualization for humans in the scene, representing their position, orientation, engagement level</description>

  <author email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</author>
  <maintainer email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>ament_index_cpp</depend>

  <depend>rclcpp</depend>

  <depend>qtbase5-dev</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>qt_gui_cpp</depend>
  <depend>hri</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libqt5-svg-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
